rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__information_schema_schemata.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 3775
expression: "execute_query(\"SELECT * FROM information_schema.schemata\".to_string()).await?"

---
+--------------+--------------------+----------------------------+------------------------+----------+--------------------+
| CATALOG_NAME | SCHEMA_NAME        | DEFAULT_CHARACTER_SET_NAME | DEFAULT_COLLATION_NAME | SQL_PATH | DEFAULT_ENCRYPTION |
+--------------+--------------------+----------------------------+------------------------+----------+--------------------+
| def          | information_schema | utf8                       | utf8_general_ci        | NULL     | NO                 |
| def          | mysql              | utf8mb4                    | utf8mb4_0900_ai_ci     | NULL     | NO                 |
| def          | performance_schema | utf8mb4                    | utf8mb4_0900_ai_ci     | NULL     | NO                 |
| def          | sys                | utf8mb4                    | utf8mb4_0900_ai_ci     | NULL     | NO                 |
| def          | test               | utf8mb4                    | utf8mb4_0900_ai_ci     | NULL     | NO                 |
+--------------+--------------------+----------------------------+------------------------+----------+--------------------+
