rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__performance_schema_variables.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 3800
expression: "execute_query(\"SELECT * FROM performance_schema.session_variables WHERE VARIABLE_NAME = 'max_allowed_packet'\".to_string()).await?"

---
+--------------------+----------------+
| VARIABLE_NAME      | VARIABLE_VALUE |
+--------------------+----------------+
| max_allowed_packet | 67108864       |
+--------------------+----------------+
